--- a/CPP_Single_Nine/CMakeLists.txt
+++ b/CPP_Single_Nine/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.22)
-project(cpp)
+cmake_minimum_required(VERSION 3.25)
+project(sing)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-ADD_SUBDIRECTORY(shenlancpp)
+ADD_SUBDIRECTORY(singleton_demos)
